--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
-    <?php include 'counter.php'; ?>
+    <?php include './counter.php'; ?>
     <!-- Favicon -->
     <link
       id="favicon"
